<resources>
    <string name="app_name">Школа58</string>
    <string name="action_settings">Настройки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Имя</string>
    <string name="namePattern">Максимка</string>
    <string name="label_card">Номер карты</string>
    <string name="card_hint">12-345678</string>
    <string name="btn_save">Сохранить</string>
    <string name="label_main_threshold">Порог (основное питание)</string>
    <string name="label_add_threshold">Порог (доп. питание)</string>
    <string name="zero">0</string>
    <string name="label_name">Максимка</string>
    <string name="title_activity_settings">Settings</string>
    <string name="image_dialog_title">Изменить изображение</string>
    <string name="image_dialog_message">Выберите источник изображения</string>
    <string name="gallery">Галерея</string>
    <string name="change_bkg">Цвет фона</string>
    <string name="camera">Камера</string>
    <string name="key_notification">key_notification</string>
    <string name="notificationLabel">Уведомления</string>
    <string name="key_token">key_token</string>
    <string name="app_label">Школа58</string>
    <string name="main_label">Школьные карты</string>
    <string name="add_label">Добавить карту</string>
    <string name="edit_label">Редактировать карту</string>
    <string name="action_delete">Удалить</string>
    <string name="key_notification_disabled">Уведомления отключены</string>
    <string name="channel_name">my_channel</string>
    <string name="channel_description">channel_description</string>
</resources>
